<resources>
    <string name="app_name">Đặt lịch hẹn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="guiTinNhan">Gửi tin nhắn...</string>
    <string name="datLichHen">Đặt lịch hẹn</string>
    <string name="thanhToan">Thanh toán</string>
    <string name="messenger">Messenger</string>
    <string name="nhapTinNhan">Nhập tin nhắn ...</string>
    <string name="doctor">Bác sĩ</string>
    <string name="dichVu">Dịch vụ</string>
    <string name="timKiem">Tìm kiếm</string>
    <string name="lichSuThanhToan">Lịch sử thanh toán</string>
    <string name="thongTinLichDaDat">Thông tin lịch đã đặt</string>
    <string name="cardiology">Cardiology</string>
    <string name="thoiGianLamViec">Thời gian làm việc</string>
    <string name="thongTinCacBacSi">Thông tin các bác sĩ</string>
    <string name="thongTinBacSi">Thông tin bác sĩ</string>
    <string name="textExample">Dr. Ava Williams is a Maternal-Fetal Medicine Specialist in New York, NY and has over 15 years of experience in the medical field. She graduated from the University of California School of Medicine - San Francisco medical school in 2006. She is affiliated with medical facilities NewYork-Presbyterian/Weill Cornell Medical Center and NYU Langone Health Tisch Hospital. She is accepting new patients. Be sure to call ahead with Dr. Williams to book an appointment.</string>
    <string name="todo">TODO</string>
    <string name="moTaBenh">Chi tiết mô tả bệnh</string>
    <string name="textExampleDetailService">Price: 100.000đ</string>
    <string name="example_doctorName">Dr. Ava Williams, M.D.</string>
    <string name="lichHenHomNay">Lịch hẹn hôm nay</string>
    <string name="choXacNhan">Chờ xác nhận</string>
    <string name="tinNhan">Tin nhắn</string>
    <string name="thongTinCaNhan">Thông tin cá nhân</string>
    <string name="huyBo">Hủy bỏ</string>
    <string name="hoVaTen">Họ và tên</string>
    <string name="chinhSuaThongTin">Chỉnh sửa thông tin</string>
    <string name="email">Email</string>
    <string name="soDienThoai">Số điện thoại</string>
    <string name="xacNhan">Xác nhận</string>
    <string name="viTri">Vị trí</string>
    <string name="namSinh">Năm sinh</string>
    <string name="soLuongToiDaMoiCa">Số lượng tối đa mỗi ca</string>
    <string name="thietLapGioLamViec">Thiết lập giờ làm việc</string>
    <string name="huyLich">Hủy lịch</string>
    <string name="trangThai">Trạng thái:</string>
    <string name="default_notification_channel_id">default_channel</string>
</resources>